RTF: fix height of wrapped pictures on export (partial fix for fdo#32613)